<resources>
    <string name="app_name">InventoryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="show_inventory">Show Inventory</string>
    <string name="query_inventory">Query Inventory</string>
    <string name="settings">Settings</string>
    <string name="backup_to_cloud">Backup to Cloud</string>
    <string name="share">Share</string>
    <string name="database_dir">/databases/</string>
    <string name="error_add_product_name">Please enter product name.</string>
    <string name="error_add_product_quantity">Please enter product quantity.</string>
    <string name="error_add_product_price">Please enter product price.</string>
    <string name="error_add_product_supplier_name">Please enter supplier name.</string>
    <string name="error_add_product_supplier_contact">Please enter supplier contact.</string>
    <string name="error_add_product_discount">Please enter product discount.</string>
    <string name="error_add_product_note">Please enter product note.</string>
    <string name="add_stored_new_record">Added new record to database</string>
    <string name="product_name_edit">Enter inventory name…</string>
    <string name="product_quantity_edit">Enter quantity…</string>
    <string name="product_price_edit">Enter price…</string>
    <string name="product_supplier_name_edit">Enter supplier name…</string>
    <string name="product_supplier_contact_edit">Enter supplier contact…</string>
    <string name="product_discount_edit">Enter discount…</string>
    <string name="product_notes_edit">Enter notes…</string>
    <string name="list_image">List image</string>
    <string name="search_table_query">Search is empty</string>
    <string name="search_hint">Sql Search</string>
    <string name="search_product">Search product</string>
    <string name="welcome_fragment">Welcome to Inventory Application</string>
    <string name="select_image">Add Image</string>
    <string name="product_image_edit">Add product image</string>
    <string name="add_new_entry">Add</string>
    <string name="back_main">Go back</string>
    <string name="error_image">Please add product image</string>
    <string name="table_column_product_name">Product name</string>
    <string name="table_column_product_price">Price</string>
    <string name="table_column_product_quantity">Quantity</string>
    <string name="table_column_supp_name">Supplier name</string>
    <string name="table_column_product_discount">Discount</string>
    <string name="table_column_supp_contact">Contact</string>
    <string name="designer_bag_01">Design Bag Cube</string>
    <string name="designer_bag_skin_02">Designer bag snake</string>
    <string name="watches_u_boat_01">U-Boat elegance</string>
    <string name="watches_u_boat_buss_02">U-Boat bussniness</string>
    <string name="dress_01">Dress Shine</string>
    <string name="dress_02">Dress White Spirit</string>
    <string name="jeans_jacket_01">Jeans Jacket Mos</string>
    <string name="jeans_jacket_02">Jeans Jacket Nine</string>
    <string name="lightweight_hoodie_01">Hoddie Time</string>
    <string name="lightweight_hoodie_02">Hoodie Vans</string>
    <string name="lightweight_hoodie_03">Hoodie Times</string>
    <string name="shirt_01">T-shirt Skull</string>
    <string name="shirt_02">T-shirt Pilot</string>
    <string name="shirt_03">T-shirt Have</string>
    <string name="shirt_04">Shirt Line</string>
    <string name="shoes_01">Design Shoes Cowb</string>
    <string name="shoes_02">Shoes Jack</string>
    <string name="shoes_design_03">Design Shoes Grid</string>
    <string name="sneakers_01">Sneakers Nike</string>
    <string name="necklace_01">Necklace Rosia</string>
    <string name="designer_bag_skin_02_desc">Description\nReal leather on the outside.\n
        Size 23.5x23x12 cm. / 9.25x9.06x4.72 in.\nSnap closure with flap.\nCroc print on the outside.\n
        Single handle, length approx. 30 cm / 11.81 in.\nAdjustable,\nremovable shoulder strap,\n
        length approx. 110/130 cm - 43.31 / 51.18 in.\nMulti-function zip pocket on the inside.\n
        Gold-colored metal elements.\n20% Cotton 80% Polyester.</string>
    <string name="designer_bag_01_desc">Description\nAn iconic model set to be an elegant everyday
        companion - the Cube is simply perfect any time of the day.\nReal leather on the outside.\n
        Quilting on the bottom part.\nHook fastening.\nSize 34x24x10 cm / 13.39x9.45x3.94 in.\n
        Hide handles with  length approx. 70 cm / 27.56 in.\n
        Pale gold coloured silver elements.\nMulti-function pockets on the inside.\n100% Polyester.\n
        100% Real leather</string>
    <string name="shirt_01_desc">Description\nCotton t-shirt.\nRound neck.\nShort sleeves.\n
        Regular fit.\nLogo Skull on the front.\n100 %% Cotton.\nMachine wash 30°.\nTrue to size.</string>
    <string name="shirt_02_desc">Description\nCotton t-shirt.\nRound neck.\nShort sleeves.\n
        Regular fit.\nLogo pilot design on the front.\n100 %% Cotton.
        \nMachine wash 30°.\nTrue to size.</string>
    <string name="shirt_03_desc">Description\nCotton t-shirt.\nRound neck.\nShort sleeves.\n
        Regular fit.\nLogo  Have on the front.\n100 %% Cotton.\nMachine wash 40°.\nTrue to size.</string>
    <string name="shirt_04_desc">Description\nCotton t-shirt.\nRound neck.\nLong sleeves.\n
        Regular fit.\nLines on front and back.\n100 %% Cotton.\nMachine wash 30°.\nTrue to size.</string>
    <string name="sneakers_01_desc">Description\nReal suede running shoe.\nRound toe.\n
        Lace-up model.\nContrasting colour inserts.\nLogo  at the side.\nFabric insole and lining.\n
        Rubber sole.\nUpper: 100% Real leather.</string>
    <string name="shoes_01_desc">Description\nReal style elegance shoe.\nRound toe.\nLace-up model.\n
        Contrasting colour inserts.\nLogo  at the side.\nFabric insole and lining.\nRubber sole.\n
        Upper: 100% Real leather.</string>
    <string name="shoes_02_desc">Description\nBusiness Jack shoe.\nRound toe.\nLace-up model.\n
        Contrasting colour inserts.\nLogo  at the side.\nFabric insole and lining.\nRubber sole.\n
        Upper: 100% Real leather.</string>
    <string name="shoes_design_03_desc">Description\nBussness Grid shoe.\nOpen toe.\nLace-up model.\n
        Black color with silver  caps  inserts.\nBlack grid.\nFabric insole and lining.\n
        Rubber sole.\nUpper: 100% Real leather.</string>
    <string name="dress_01_desc">Description\nDress with sequins.\nHigh neck.\nShort sleeves.\n
        Regular fit.\nZip fastening at the back.\nDetails in a contrasting colour.\n100% Polyester.\n
        Lining: 95% Polyester 5% Elastane.\nHand wash.\nPicture shows size S, measurements:\n
        Total approx. 82 cm. / 32.2 in.\nTrue to size.</string>
    <string name="dress_02_desc">Description\nLace dress.\nV-neck.\nSleeveless model with straps.\n
        Slim fit.\nCorset detailing on neckline.\n50%% Polyline, 35%% Cotton, 15%% Viscose.\n
        Lining: 93%% Polyester, 7%% Elastane.\nHand wash.\nModel wears size 40.\nTrue to size.</string>
    <string name="jeans_jacket_01_desc">Description\nStretch cotton denim jacket.\nClassic lapel.\n
        Long sleeves, approx. 66.6 cm.\nSlim fit.\nFront button fastening.\nBreast pockets.\n
        Used effect.\nEagle embroidery on back.\n98%% Cotton, 2%% Elastane.\nMachine wash at 30°.\n
        Model wears size S, measurements: Shoulder to hem approx. 61 cm.\nTrue to size.</string>
    <string name="jeans_jacket_02_desc">Description\nDenim model for a trend-inspired, modern
        approach to the country look.\nJacket with sheepskin-look collar and lining.\n
        Cotton blend denim jacket.\nSheepskin-look collar.\nLong sleeves. approx. 70 cm. / 27.56 in.\n
        Front fastening with buttons.\nRegular fit.\nStretch inserts on the cuffs and at the bottom.\n
        99% Cotton 1% Polyamide.\nMachine wash 30°.\nPicture shows size M, measurements:
        Total approx. 67 cm. / 26.38 in.\nShoulders approx. 45 cm. / 17.72 in.\nTrue to size.</string>
    <string name="lightweight_hoodie_01_desc">Description\nCotton blend sweatshirt.\n
        Round neck with hood.\nLong sleeves, approx. 67 cm. / 26.38 in.\nRegular fit.\n
        Logo on the front.\n65% Polyester 35% Cotton.\nMachine wash 30°.\nPicture shows size M,
        lengths: Total approx. 70 cm. / 27.56 in.\nShoulders approx. 43.5 cm. / 17.13 in.\n
        True to size.</string>
    <string name="lightweight_hoodie_03_desc">Description\n Cotton blend sweatshirt.\n
        Round neck with hood.\n Long sleeves, approx. 67 cm. / 26.38 in.\nRegular fit.\n
        Logo on the front.\n65% Polyester 35% Cotton.\nMachine wash 30°.\nPicture shows size M,
        lengths: Total approx. 70 cm. / 27.56 in.\nShoulders approx. 43.5 cm. / 17.13 in.\n
        True to size.</string>
    <string name="lightweight_hoodie_02_desc">Description\nCotton blend sweatshirt.\n
        Round neck with hood.\nLong sleeves, approx. 67 cm. / 26.38 in.\n Regular fit.\n
        Logo on the back.\n65% Polyester 35% Cotton.\nMachine wash 30°.\nPicture shows size M,
        lengths: Total approx. 70 cm. / 27.56 in.\nShoulders approx. 43.5 cm. / 17.13 in.\n
        True to size.</string>
    <string name="watches_u_boat_01_desc">Black version:\nDial colour: black.\nCase colour: black.\n
        Strap colour: black.</string>
    <string name="watches_u_boat_buss_02_desc">Business version:\nDial colour: steel.\n
        Case colour: steel.\nStrap colour: steel.</string>
    <string name="necklace_01_desc">Description\nRhodium-plated long necklace.\n
        Pendant with multiple chains.\nAdjustable length: 41-46 cm.</string>
    <string name="supplier_name_designer_bag_01">Clothier Design Source</string>
    <string name="supplier_contact_designer_bag_01">651 225 8025</string>
    <string name="supplier_name_designer_bag_skin_02">Joanna Design Source</string>
    <string name="supplier_contact_designer_bag_skin_02">212 938 1183</string>
    <string name="supplier_name_watches_u_boat_01">U-boat</string>
    <string name="supplier_contact_watches_u_boat_01">0044 (0)20 3510 0670</string>
    <string name="supplier_contact_watches_u_boat_buss_02">044 (0)20 3510 0670</string>
    <string name="supplier_name_watches_u_boat_buss_02">U Boat</string>
    <string name="supplier_name_dress_01">Guess</string>
    <string name="supplier_name_dress_02">Guess</string>
    <string name="supplier_contact_dress_01">00 800 4837 7387</string>
    <string name="supplier_contact_dress_02">00 800 4837 7387</string>
    <string name="supplier_contact_jeans_jacket_01">01 8401806</string>
    <string name="supplier_contact_jeans_jacket_02">01 8401806</string>
    <string name="supplier_name_jeans_jacket_01">Jack &amp; Jones</string>
    <string name="supplier_name_jeans_jacket_02">Jack &amp; Jones</string>
    <string name="supplier_name_lightweight_hoodie_02">Vans</string>
    <string name="decrement_order_button">decrement_order_button</string>
    <string name="increment_order_button">increment_order_button</string>
    <string name="sell">Sell</string>
    <string name="zero">0</string>
    <string name="total">Total:</string>
    <string name="fog_image">Fog Image</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="add_to_database">add_to_database</string>
    <string name="delete_database_record">Delete database record.</string>
    <string name="order_button">Order Button</string>
    <string name="deleted_record">Deleted</string>
    <string name="edit_data">Edit data.</string>
    <string name="add_new_entry_button">Add new entry</string>
</resources>