<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_to_inventory"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/add_to_inventory" />
        <item
            android:id="@+id/show_inventory"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/show_inventory" />
        <item
            android:id="@+id/query_inventory"
            android:icon="@drawable/ic_query_builder_white_24dp"
            android:title="@string/query_inventory" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:icon="@drawable/ic_sync_white_24dp"
                android:title="@string/backup_to_cloud" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>
