<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_tool_bar"
    style="?metaButtonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:background="@color/black_overlay"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/add_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/add_to_database"
        android:src="@drawable/ic_playlist_add_black_24dp"
        android:text="@string/add_new_entry_button" />

    <ImageButton
        android:id="@+id/edit_btn"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/edit_data"
        android:src="@drawable/ic_edit_white_24dp" />

    <ImageButton
        android:id="@+id/delete_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/delete_database_record"
        android:src="@drawable/ic_delete_forever_black_24dp"
        android:text="@string/deleted_record" />

    <ImageButton
        android:id="@+id/order_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/order_button"
        android:src="@drawable/ic_call_white_24dp"
        android:text="@string/order_button" />
</LinearLayout>