<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="horizontal">

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_product_name" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_product_price" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_product_quantity" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_supp_name" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_supp_contact" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/table_column_product_discount" />
</TableRow>